# fastapi-localization

./: pyproject.toml  setup.cfg
fastapi_localization/: localization.py  middleware.py  response.py  route.py
