[project]
name = "fastapi-localization"
authors = [
    { name = "Ilgiz Kasymov", email = "ilgizkasymov@gmail.com" }
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Session',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: FastAPI',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.7',
]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "fastapi>=0.103.1",
]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
