[metadata]
name = fastapi-localization
version = 0.0a2.dev3
author = Ilgiz Kasymov
author_email = ilgizkasymov@gmail.com
description = Language localization fastapi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ikasymov/fastapi-localization
classifiers =
    'Intended Audience :: Developers'
    'Topic :: Internet :: WWW/HTTP :: Session'
    'Topic :: Internet :: WWW/HTTP :: WSGI'
    'Topic :: Software Development :: Libraries :: Application Frameworks'
    'Topic :: Software Development :: Libraries :: Python Modules'
    'Framework :: FastAPI'
    'License :: OSI Approved :: Apache Software License'
    'Programming Language :: Python :: 3.7'

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    fastapi>=0.103.1

[options.package_data]
* = *.txt, *.rst
hello = *.msg


[options.packages.find]
